# trilateration_xbee_ros

./: LICENSE  README.md
trilateration/: CMakeLists.txt  package.xml  setup.py
trilateration/include/trilateration/: trilateration.h
trilateration/launch/: get_distance_from_rssi.launch  get_rssi_xbee.launch  get_trilateration.launch  trilateration_package.launch
trilateration/params/: params_trilateration.yaml
trilateration/scripts/: get_distance_from_rssi.py  get_rssi_xbee.py
trilateration/scripts/python_package/: RssiFromXbee.py  kalman_rssi.py  rssi_to_distance.py
trilateration/src/: trilateration.cpp  trilateration_node.cpp
trilateration_msg/: CMakeLists.txt  package.xml
trilateration_msg/msg/: distance_data.msg  rssi_data.msg
